--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -4,7 +4,8 @@
       <div class="ms-slide slide-1" data-delay="8">
         <%= image_fu(item.image, "1920x935#c") %>
         <div class="ms-layer banner-text about" data-type="text" data-delay="750" data-duration="2000" data-ease="easeOutExpo" data-resize="false">
-          <h2><%= @location.name %></h2>
+          <h2>Discover</h2>
+          <h1><%= @location.name %></h1>
         </div>
         <img src="/assets/blank.gif" data-src="/assets/downarrow.png" class="ms-layer arrow" data-resize="false" data-type="image" data-delay="1500" data-duration="9000" data-ease="easeOutExpo" data-resize="false">
       </div>
@@ -16,7 +17,7 @@
       <div class="ms-slide slide-1" data-delay="8">
         <%= image_fu(item.image, "1920x935#c") %>
         <div class="ms-layer banner-text about" data-type="text" data-delay="750" data-duration="2000" data-ease="easeOutExpo" data-resize="false">
-          <h2><%= @accommodation.name %></h2>
+          <h1><%= @accommodation.name %></h1>
         </div>
         <img src="/assets/blank.gif" data-src="/assets/downarrow.png" class="ms-layer arrow" data-resize="false" data-type="image" data-delay="1500" data-duration="9000" data-ease="easeOutExpo" data-resize="false">
       </div>
@@ -28,7 +29,7 @@
       <div class="ms-slide slide-1" data-delay="8">
         <%= image_fu(item.image, "1920x935#c") %>
         <div class="ms-layer banner-text about" data-type="text" data-delay="750" data-duration="2000" data-ease="easeOutExpo" data-resize="false">
-          <h2><%= @location.name %></h2>
+          <h1><%= @activity.name %></h1>
         </div>
         <img src="/assets/blank.gif" data-src="/assets/downarrow.png" class="ms-layer arrow" data-resize="false" data-type="image" data-delay="1500" data-duration="9000" data-ease="easeOutExpo" data-resize="false">
       </div>
