--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -27,7 +27,7 @@
 
 .clear {clear:both;}
 
-//.div1,.div2,.div3,.div4,.div5,.div6 { opacity:0; filter:alpha(opacity=0); }
+.div1,.div2,.div3,.div4,.div5,.div6 { opacity:0; filter:alpha(opacity=0); }
 
 body { @include main_font(); font-size:14px; line-height:28px; overflow-x:hidden; text-align:center;}
 
@@ -39,15 +39,15 @@ a,a:hover,a:focus {color:#000000; text-decoration:none;}
 
 p {width:740px; text-align:justify; margin:0 auto 30px auto;}
 
-nav, .navbar-hamburger {-webkit-touch-callout: none; -webkit-user-select: none; -khtml-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none;}
-nav {position: fixed; z-index: 10; background-color: rgba(0,0,0, 0.85); width: 100%; height: 100%; text-align: center; display: table; color: white;
-  ul {list-style:none; margin:0; padding:0; display: table-cell; vertical-align: middle;
-    h2 {color:#ffffff; cursor:pointer;}
+nav, .navbar-hamburger {-webkit-touch-callout: none; -webkit-user-select: none; -khtml-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none;text-align: center;}
+nav {position: fixed; z-index: 10; background-color: rgba(0,0,0, 0.85); width: 100%; height: 100%;
+  ul {list-style:none; margin:0; padding:0; vertical-align: middle; display:inline-block;
     a, a:hover, a:focus {color:#ffffff;}
-    li ul {display:block;}
-    li ul li {padding:5px 0;}
+    li {@include header_font(); font-size:16px; letter-spacing:2px; text-transform: uppercase; margin:30px 0; line-height:30px;}
   }
 }
+nav:before { content: ''; display: inline-block; height: 100%; vertical-align: middle;  margin-right: -0.25em;}
+
 .nav-hide {display: none;}
 
 .navbar-hamburger { position: fixed; top: 20px; right: 20px; width: 30px; height: 22px; z-index: 20; cursor: pointer; }
@@ -61,14 +61,6 @@ nav {position: fixed; z-index: 10; background-color: rgba(0,0,0, 0.85); width: 1
   .bar2 { background-color: transparent; }
 }
 
-.emerging-countries {height:190px;
-  .country-1 {display:none;}
-  .country-2 {display:none;}
-  .country-3 {display:none;}
-  .country-4 {display:none;}
-  .country-5 {display:none;}
-}
-
 .telephone-number {
   h2 {position:absolute; z-index:2; right:100px; color:#ffffff; margin:20px 0 0 0; line-height:22px;}
   .fa {font-size:18px;}
@@ -79,14 +71,7 @@ nav {position: fixed; z-index: 10; background-color: rgba(0,0,0, 0.85); width: 1
   h1 {@include slider_font(); font-size:120px; margin:45px 0 30px 0; letter-spacing:13px;}
   h3 {@include header_font(300); font-size:14px; color:#ffffff; letter-spacing:0;}
   .overlay {position: absolute; top: 0; bottom: 0; left: 0; right: 0; z-index: 5; background: url("../assets/overlay.png") repeat;}
-  .logo,.banner-text {top:50%; margin-top:-100px; left:50%;}
-  .logo { margin-left:-250px;}
-  .about {margin-left:-341px;}
-  .sierra-leone { margin-left:-460px;}
-  .ghana { margin-left:-247px;}
-  .ethiopia { margin-left:-313px;}
-  .rwanda {margin-left:-304px;}
-  .madagascar {margin-left:-480px}
+  .logo,.banner-text {top:50%; margin-top:-100px; position:relative;}
   .arrow {top:60%; left:50%; margin:0 0 0 -15px;}
   .arrow:hover {cursor:pointer;}
 }
@@ -138,11 +123,29 @@ nav {position: fixed; z-index: 10; background-color: rgba(0,0,0, 0.85); width: 1
 
 .bio-pic {margin:0 auto 30px auto;}
 
-.accommodations,.activities {background:#484848;
-  .bx-viewport {background:#484848;}
-  .slide {background:#484848;
-    span {display:block; height:50px; line-height:50px;}
+.accommodations,.activities,.locations {background:#656565; padding-bottom:30px; transition:background 0.3s; 
+  h1 {color:#ffffff; margin:20px 0; font-size:20px;}
+  .bx-loading, .bx-viewport {background:transparent!important;}
+  .slide {@include header_font(); font-size:14px; letter-spacing:2px; text-transform: uppercase; margin:0; line-height:30px;background:transparent!important;
+    a {color:#cccccc; transition:color 0.6s; display:block; 
+      img {border:1px solid #454545; transition:border 0.3s; width:100%}
+    }
+  }
+  .slide:hover {
     a {color:#ffffff;}
+    img {border:1px solid grey;}
+  }
+  .bx-prev,.bx-next { background: url(/assets/controls.png) no-repeat; width: 13px!important; transition:opacity 0.3s; height:25px!important; top:45%!important; opacity:0.6}
+  .bx-prev {left: -50px; background-position:top left!important;}
+  .bx-next {right: -50px; background-position:top right!important;}
+  .bx-prev:hover,.bx-next:hover {opacity:1;}
+}
+.accommodations:hover,.activities:hover,.locations:hover {background:#555555;}
+.accommodations {border-bottom:1px solid #8a8a8a;}
+
+#activities,#locations {
+  ul {list-style:none; margin:0 0 50px 0; padding:0; -webkit-column-count: 2; -moz-column-count: 2; column-count: 2; background:#e8e8e8; padding:15px 30px; text-align:left;
+    li {padding:10px 0;}
   }
 }
 
