--- a/app/views/layouts/locations.html.erb
+++ b/app/views/layouts/locations.html.erb
@@ -10,49 +10,75 @@
 
     <%= render '/shared/banner' %>
 
-    <div id="welcome">
-      <div class="container">
-        <div class="row">
-          <div class="col-xs-12 div1">
-              <%=raw @location.description %>
-          </div>
-        </div>
-      </div>
-    </div>
+    <% if action_name == "index" %>
 
-    <% accommodations = Refinery::Accommodations::Accommodation.all %>
-    <% if accommodations.present? %>
-      <div class="accommodations">
-        <div class="container">
-          <div class="row">
-            <div class="col-xs-12">
-              <div id="accommodations_slider">
-                <% accommodations.each do |accommodation| %>
-                  <div class="slide"><%= link_to (image_fu accommodation.cover_image, "300x150#c"), refinery.accommodations_accommodation_path(accommodation) %><span><%= link_to accommodation.name, refinery.accommodations_accommodation_path(accommodation) %></span></div>
-                <% end %>
+      <% if @locations.present? %>
+        <div id="activities">
+          <div class="container">
+            <div class="row">
+              <div class="col-xs-12 div1">
+                <h1>Locations</h1>
+                <ul>
+                  <% @locations.each do |location| %>
+                    <li>
+                      <%= link_to location.name, refinery.locations_location_path(location) %>
+                    </li>
+                  <% end %>
+                </ul>
               </div>
             </div>
           </div>
         </div>
-      </div>
-    <% end %>
+      <% end %>
 
-    <% activities = Refinery::Activities::Activity.all %>
-    <% if activities.present? %>
-      <div class="activities">
+    <% else %>
+
+      <div id="welcome">
         <div class="container">
           <div class="row">
-            <div class="col-xs-12">
-              <div id="activities_slider">
-                <% activities.each do |activity| %>
-                  <div class="slide"><%= link_to (image_fu activity.cover_image, "300x150#c"), refinery.activities_activity_path(activity) %><span><%= link_to activity.name, refinery.activities_activity_path(activity) %></span></div>
-                <% end %>
-              </div>
+            <div class="col-xs-12 div1">
+                <%=raw @location.description %>
             </div>
           </div>
         </div>
       </div>
-    <% end %>
+
+      <% accommodations = Refinery::Accommodations::Accommodation.all %>
+      <% if accommodations.present? %>
+        <div class="accommodations">
+          <div class="container">
+            <div class="row">
+              <div class="col-xs-12">
+                <h1>Popular Lodges</h1>
+                <div id="accommodations_slider">
+                  <% accommodations.each do |accommodation| %>
+                    <div class="slide"><%= link_to (image_fu accommodation.cover_image, "300x175#c") + accommodation.name, refinery.accommodations_accommodation_path(accommodation) %></div>
+                  <% end %>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      <% end %>
+
+      <% activities = Refinery::Activities::Activity.all %>
+      <% if activities.present? %>
+        <div class="activities">
+          <div class="container">
+            <div class="row">
+              <div class="col-xs-12">
+                <h1>Popular Activities</h1>
+                <div id="activities_slider">
+                  <% activities.each do |activity| %>
+                    <div class="slide"><%= link_to (image_fu activity.cover_image, "300x175#c") + activity.name, refinery.activities_activity_path(activity) %></div>
+                  <% end %>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      <% end %>
+    <% end %> 
 
     <%= render '/refinery/footer' -%>
 
