--- a/app/views/layouts/accommodations.html.erb
+++ b/app/views/layouts/accommodations.html.erb
@@ -10,35 +10,36 @@
 
     <%= render '/shared/banner' %>
 
-    <div id="welcome">
-      <div class="container">
-        <div class="row">
-          <div class="col-xs-12 div1">
-            <p>
-              <%=raw @accommodation.description %>
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <% activities = Refinery::Activities::Activity.all %>
-    <% if activities.present? %>
-      <div class="activities">
+    
+      <div id="welcome">
         <div class="container">
           <div class="row">
-            <div class="col-xs-12">
-              <h1>Popular Activities</h1>
-              <div id="activities_slider">
-                <% activities.each do |activity| %>
-                  <div class="slide"><%= link_to (image_fu activity.cover_image, "300x175#c") + activity.name, refinery.activities_activity_path(activity) %></div>
-                <% end %>
-              </div>
+            <div class="col-xs-12 div1">
+              <p>
+                <%=raw @accommodation.description %>
+              </p>
             </div>
           </div>
         </div>
       </div>
-    <% end %>
+      <% activities = Refinery::Activities::Activity.all %>
+      <% if activities.present? %>
+        <div class="activities">
+          <div class="container">
+            <div class="row">
+              <div class="col-xs-12">
+                <h1>Popular Experiences</h1>
+                <div id="activities_slider">
+                  <% activities.each do |activity| %>
+                    <div class="slide"><%= link_to (image_fu activity.cover_image, "300x175#c") + activity.name, refinery.activities_activity_path(activity) %></div>
+                  <% end %>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      <% end %>
+    
 
     <%= render '/refinery/footer' -%>
 
