--- a/app/views/refinery/blog/posts/_comments.html.erb
+++ b/app/views/refinery/blog/posts/_comments.html.erb
@@ -22,29 +22,25 @@
                  :include_object_name => true
                } %>
     <div class='field'>
-      <%= f.label :name %>
-      <%= f.text_field :name %>
+      <%= f.text_field :name, :label => false, :placeholder => "Name"  %>
     </div>
     <div class='field'>
-      <%= f.label :email %>
-      <%= f.email_field :email %>
+      <%= f.email_field :email, :label => false, :placeholder => "Email"  %>
     </div>
     <div class='field message_field'>
-      <%= f.label :message %>
-      <%= f.text_area :message, :rows => 6 %>
+      <%= f.text_area :message, :rows => 6, :label => false, :placeholder => "Message"  %>
     </div>
+    <div class="captcha"></div>
 
-    <div class="control">
-      <img src="/assets/captcha.png">
+    <div class='field'>
+      <%= f.text_field :captcha, :label => false, :placeholder => "Retype Captcha"  %>
     </div>
-
-    <div class="control">
-      <%= f.label :captcha, 'Retype Captcha' %>
-      <%= f.text_field :captcha %>
-    </div>
-
     <div class='field form-actions'>
       <%= f.submit t('submit', :scope => 'refinery.blog.posts.show') %>
     </div>
   <% end %>
 </aside>
+
+
+
+
