--- a/app/views/refinery/blog/posts/index.html.erb
+++ b/app/views/refinery/blog/posts/index.html.erb
@@ -14,7 +14,10 @@
 <% content_for :body_content_right_prepend do -%>
   <%= raw @page.content_for(Refinery::Pages.default_parts.second.to_sym) %>
 <% end if Refinery::Pages.default_parts.many? -%>
-<%= render :partial => '/refinery/blog/shared/body_content_right' %>
+<%#= render :partial => '/refinery/blog/shared/body_content_right' %>
 
-<%= render :partial => "/refinery/content_page" %>
+<%= render '/refinery/content_page'%>
 <% content_for :stylesheets, stylesheet_link_tag('refinery/blog/frontend') %>
+
+
+
